FIX "Grid's header and body are misaligned when a grid is Multi Row Layout and is continuous virtualization mode."

--- a/src/css/themes/infragistics/infragistics.theme.less
+++ b/src/css/themes/infragistics/infragistics.theme.less
@@ -1811,10 +1811,10 @@ input.ui-igbutton {
     color: @ui-icons-light;
 }
 
-.ui-iggrid tbody td {
+/*.ui-iggrid tbody td {
     border-left: 1px solid transparent!important;
     border-right: 1px solid transparent!important;
-}
+}*/
 
 .ui-iggrid tbody td,
 .ui-iggrid tbody th.ui-iggrid-rowselector-class,
